Moved admin functions into own partial

--- a/app/components/partials/main/main.view.html
+++ b/app/components/partials/main/main.view.html
@@ -151,4 +151,7 @@
     <div ng-controller="FooterCtrl" id="footer">
         <div ng-include="'/app/components/partials/footer/footer.view.html'" />
     </div>
+    <div ng-controller="AdminCtrl" id="footer">
+        <div ng-include="'/app/components/partials/admin/admin.view.html'" />
+    </div>
 </div> <!-- .container -->
