Interim check-in

--- a/app/components/partials/admin/admin.view.html
+++ b/app/components/partials/admin/admin.view.html
@@ -2,6 +2,7 @@
     <div class="col-md-12">
         <div class="alert alert-danger">
             <a ng-click="refresh()">Refresh</a>
+            <a ng-click="clearCookie()">Clear Cookie</a>
         </div>        
     </div>
 </div>
