--- a/app/components/partials/search/search.view.html
+++ b/app/components/partials/search/search.view.html
@@ -1,6 +1,7 @@
-﻿<form id="search-from" ng-submit="search()">
-    <div class="input-group">
+﻿<form name="search" on-search-submit="searchForLocation()" novalidate>
+    <div class="input-group" ng-class="{'has-error': search.$submitted && search.query.$invalid}">
         <span class="input-group-addon"><i class="fa fa-search aria-hidden="true"></i></span>
-        <input class="form-control" id="query" type="text" placeholder="Enter a zip code or city">
+        <input is-valid-search-input class="form-control" name="query" ng-model="searchData.query" type="text" placeholder="Enter a zip code or city">        
     </div>
+    <span style="color: red;" ng-show="search.$submitted && search.query.$error.isValidSearchInput">Invalid value</span>    
 </form>
