Quasi-working search working

--- a/app/components/partials/search/search.view.html
+++ b/app/components/partials/search/search.view.html
@@ -1,4 +1,4 @@
-﻿<form name="search" on-search-submit="searchForLocation()" novalidate>
+﻿<form name="search" on-search-submit="searchForLocation(search)" novalidate>
     <div class="input-group" ng-class="{'has-error': search.$submitted && search.query.$invalid}">
         <span class="input-group-addon"><i class="fa fa-search aria-hidden="true"></i></span>
         <input is-valid-search-input class="form-control" name="query" ng-model="searchData.query" type="text" placeholder="Enter a zip code or city">        
