--- a/app/components/partials/admin/admin.view.html
+++ b/app/components/partials/admin/admin.view.html
@@ -3,6 +3,7 @@
         <div class="alert alert-danger">
             <a ng-click="refresh()">Refresh</a>
             <a ng-click="clearCookie()">Clear Cookie</a>
+            units: {{ cookieData.weatherUnits }} locations: {{ cookieData.locations }}
         </div>        
     </div>
 </div>
