Add check on temp to handle difference between 0 deg and false

--- a/app/components/partials/main/main.view.html
+++ b/app/components/partials/main/main.view.html
@@ -52,7 +52,7 @@
                                                         </div>
                                                         <div class="row">
                                                             <div class="col-xs-12 text-center">
-                                                                <span ng-hide="!weatherData.CurrentWeather.main.temperature" class="temperature">{{ weatherData.CurrentWeather.main.temperature  | number : 0 }}&deg; {{ weatherData.CurrentWeather.main.temperatureUnits }}</span>
+                                                                <span ng-hide="weatherData.CurrentWeather.main.temperature === false" class="temperature">{{ weatherData.CurrentWeather.main.temperature  | number : 0 }}&deg; {{ weatherData.CurrentWeather.main.temperatureUnits }}</span>
                                                             </div>
                                                         </div>
                                                         <div class="row">
@@ -113,7 +113,7 @@
                                         <div class="col-xs-12 text-center"><img ng-hide="!forecast.weather.icon" src="{{ forecast.weather.icon }}" border="0" /><i ng-hide="forecast.weather.icon" class="fa fa-question" aria-hidden="true"></i></div>                                        
                                     </div>
                                     <div class="col-xs-12 text-center">
-                                        <span ng-hide="!forecast.main.temperature" class="temperature">{{forecast.main.temperature | number : 0 }}&deg; {{ forecast.main.temperatureUnits }}</span>                                        
+                                        <span ng-hide="forecast.main.temperature === false" class="temperature">{{forecast.main.temperature | number : 0 }}&deg; {{ forecast.main.temperatureUnits }}</span>                                        
                                     </div>
                                 </div>
                             </div>
