--- a/app/components/partials/main/main.view.html
+++ b/app/components/partials/main/main.view.html
@@ -5,9 +5,11 @@
         <div class="col-md-4 col-md-offset-3 text-center">
             <div ng-controller="SearchCtrl" id="search-wrapper">
                 <div ng-include="'/app/components/partials/search/search.view.html'" />
-            </div>
-            
-        </div> <!-- .col-md-12 -->
+            </div>            
+        </div>
+        <div class="col-md-4 col-md-offset-1 col-xs-12">
+            <weather-loading-indicator class="loading-spinner text-center"></weather-loading-indicator>
+        </div>
     </div> <!-- .row -->    
     <div ng-show="initialized && onLoadWeatherError" class="row">
         <div class="col-xs-12">
@@ -36,14 +38,13 @@
                         <div class="panel-heading">Current Conditions</div>
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-xs-12">
-                                    <weather-loading-indicator />                                    
+                                <div class="col-xs-12">                                                                        
                                     <div class="jumbotron current-conditions">
                                         <div class="row">
                                             <div class="col-sm-7 col-xs-12">
                                                 <div class="panel panel-default">
-                                                    <div class="panel-body">
-                                                        <div class="row">
+                                                    <div class="panel-body">                                                        
+                                                        <div class="row">                                                            
                                                             <div class="col-xs-12 text-center">
                                                                 <h3><span>{{ weatherData.Locale.city }}</span><span ng-hide="!weatherData.Locale.zip"> - {{ weatherData.Locale.zip }}</span></h3>
                                                             </div>
