--- a/app/components/partials/main/main.view.html
+++ b/app/components/partials/main/main.view.html
@@ -24,7 +24,7 @@
                         </p>
                     </div>
                     <div class="col-xs-12 col-sm-4 text-center">
-                        <img src="/assets/img/puppies.jpg" border="0" width="200" height="143" />
+                        <img src="assets/img/puppies.jpg" border="0" width="200" height="143" />
                     </div>                        
                 </div>
             </div>
@@ -112,7 +112,7 @@
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-xs-12 text-center"><img ng-hide="!forecast.weather.icon" src="{{ forecast.weather.icon }}" border="0" /><i ng-hide="forecast.weather.icon" class="fa fa-question" aria-hidden="true"></i></div>                                        
+                                        <div class="col-xs-12 text-center"><img ng-hide="forecast.weather.icon === false" src="{{ forecast.weather.icon }}" border="0" /><i ng-hide="forecast.weather.icon" class="fa fa-question" aria-hidden="true"></i></div>                                        
                                     </div>
                                     <div class="col-xs-12 text-center">
                                         <span ng-hide="forecast.main.temperature === false" class="temperature">{{forecast.main.temperature | number : 0 }}&deg; {{ forecast.main.temperatureUnits }}</span>                                        
@@ -142,7 +142,7 @@
                             <div class="row">
                                 <div class="col-xs-5"><span ng-hide="!forecast.timestamp" >{{ forecast.timestamp * 1000 | date:'EEE' }}<br />{{ forecast.timestamp * 1000 | date:'MMM d' }}</span></div>
                                 <div class="col-xs-4 forecast-temperature"><span class="forecast-high">{{ forecast.forecast.max  | number : 0 }}</span> | <span class="forecast-low">{{ forecast.forecast.min | number : 0 }}</span>&deg; {{ forecast.forecast.temperatureUnits }}</span></div>                                
-                                <div class="col-xs-3"><img ng-hide="!forecast.weather.icon" src="{{ forecast.weather.icon }}" border="0" /><i ng-hide="forecast.weather.icon" class="fa fa-question" aria-hidden="true"></i></div>                                        
+                                <div class="col-xs-3"><img ng-hide="forecast.weather.icon === false" src="{{ forecast.weather.icon }}" border="0" /><i ng-hide="forecast.weather.icon" class="fa fa-question" aria-hidden="true"></i></div>                                        
                             </div>
                         </div>
                     </div>
